fixed horizontal scroll

--- a/app/scss/_basic.scss
+++ b/app/scss/_basic.scss
@@ -26,10 +26,11 @@ img {
 }
 
 body {
-    padding: 0 10px;
+    padding: 0;
     background-color: #ffffff;
     font-family: 'TTHoves', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+    
     
 }
 
@@ -41,6 +42,10 @@ body {
     max-width: 1170px;
     width: 100%;
     margin: 0 auto;
+
+    @media (max-width: 1170px) {
+        padding: 0 10px;
+    }
 }
 
 .title {
