--- a/app/scss/parts/_form.scss
+++ b/app/scss/parts/_form.scss
@@ -33,7 +33,7 @@
         color: $gray1;
         position: relative;
         margin-left: 35px;
-        text-indent: -5px;
+        // text-indent: -1px;
         cursor: pointer;
     }
 
@@ -85,8 +85,9 @@
    &__check {
        appearance: none;
         position: absolute;
-        // width: 1px;
-        // height: 1px;
+        left: -10px;
+        width: 1px;
+        height: 1px;
         // overflow: hidden;
         // clip: rect(0, 0, 0, 0);
         // opacity: 0;
@@ -110,6 +111,10 @@
             background-position: center;
             background-size: contain;
             background-repeat: no-repeat;
+
+            @media (max-width: 400px) {
+                margin-left: -30px;
+            }
         }
 
         &:checked + .form__check--custom {
