--- a/app/scss/parts/_pageProject.scss
+++ b/app/scss/parts/_pageProject.scss
@@ -4,3 +4,9 @@
 .swiper-wraper {
     width: 100%;
 }
+
+//  ! sertificates page style
+
+.certificates__container {
+    overflow-x: hidden;
+}
