--- a/lesson33_Serhiioc/css/style.css
+++ b/lesson33_Serhiioc/css/style.css
@@ -1,4 +1,12 @@
 @font-face {
+  font-family: "linea";
+  font-style: normal;
+  font-weight: undefined;
+  font-display: swap;
+  src: url("../fonts/linea.woff2") format("woff2"), url("../fonts/linea.woff") format("woff");
+}
+
+@font-face {
   font-family: "SFProDisplay-Black";
   font-style: normal;
   font-weight: 900;
@@ -46,14 +54,6 @@
   src: url("../fonts/TTHoves-semibold.woff2") format("woff2"), url("../fonts/TTHoves-semibold.woff") format("woff");
 }
 
-@font-face {
-  font-family: "linea";
-  font-style: normal;
-  font-weight: undefined;
-  font-display: swap;
-  src: url("../fonts/linea.woff2") format("woff2"), url("../fonts/linea.woff") format("woff");
-}
-
 body {
   box-sizing: border-box;
 }
@@ -81,7 +81,7 @@ img {
 }
 
 body {
-  padding: 0 10px;
+  padding: 0;
   background-color: #ffffff;
   font-family: 'TTHoves', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -207,7 +207,6 @@ body {
   color: #333333;
   position: relative;
   margin-left: 35px;
-  text-indent: -5px;
   cursor: pointer;
 }
 
@@ -254,6 +253,9 @@ body {
   -moz-appearance: none;
   appearance: none;
   position: absolute;
+  left: -10px;
+  width: 1px;
+  height: 1px;
 }
 
 .form__check:focus {
@@ -877,6 +879,10 @@ body {
   width: 100%;
 }
 
+.certificates__container {
+  overflow-x: hidden;
+}
+
 .contacts__container {
   display: grid;
   grid-template-columns: 0.7fr 1fr;
@@ -1029,6 +1035,12 @@ body {
   .projects__grid {
     grid-template-columns: 240px 240px 150px 330px;
     grid-template-rows: 190px 190px;
+  }
+}
+
+@media (max-width: 1170px) {
+  .container {
+    padding: 0 10px;
   }
 }
 
@@ -1292,6 +1304,10 @@ body {
 @media (max-width: 400px) {
   .title {
     font-size: 44px;
+  }
+
+  .form__check--custom {
+    margin-left: -30px;
   }
 
   .about__title {
